--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,30 @@ h1:hover{
     background-color: #30c1c1;
 }
 
+h1:active{
+    color: blue;
+}
+
 p:hover{
     color: red;
 }
 
+p:active{
+    color: green;
+}
+
 input:focus{
    background-color: teal; 
+   color: red;
 }
 
 button:focus{
     border-radius: 10px;
     color: blue;
+}
+
+button:active{
+    background-color: orange;
+    color: red;
+    font-size: 30px;
 }
