--- a/psudoclass-exercise/styles.css
+++ b/psudoclass-exercise/styles.css
@@ -1,3 +1,16 @@
 button{
     display: block;
+    background-color: #a1a3a3;
+}
+
+.purple:active{
+    background-color: #9c27e5;
+}
+
+.green:hover{        
+    background-color: #27e559;
+}
+
+.orange:focus{
+    background-color: #f79400;
 }
