--- a/playground/scale.css
+++ b/playground/scale.css
@@ -7,5 +7,11 @@ p{
 }
 
 .transformed{
-    transform: scale(2, 0.2);
+    background-color: #3498db;
+    transform: scale(2);
+    /*transform-origin: 0 0;*/
+    /*transform-origin: left, top;*/
+    /*transform-origin: left;*/
+    /*transform-origin: right;*/
+    transform-orign: center;
 }
