--- a/playground/scale.css
+++ b/playground/scale.css
@@ -1,4 +1,4 @@
-p{
+p, h2{
     width: 25%;
     height: 25%;
     background-color: #1abc9c;
@@ -14,4 +14,11 @@ p{
     /*transform-origin: left;*/
     /*transform-origin: right;*/
     transform-orign: center;
+}
+
+.rotate{
+    background-color: #3498db;
+    transform: rotate(60deg);
+    transform-origin: 0 0;
+    transform-origin: right bottom;
 }
