--- a/playground/transition.css
+++ b/playground/transition.css
@@ -1,15 +1,24 @@
 .box{
     background-color: #5518ab;
     color: #fff;
-    height: 50px;
-    width: 100px;
+    height: 20%;
+    width: 20%;
     border-radius: 5px;
     margin: 20%;
-    padding: 10%;
+    padding: 5%;
+    text-align: center;
 }
 
 .box:hover{
     background: #e74c3c;
     transform-origin: top left;
-    transform: scale(2);
+    transform: scale(2) rotate(45deg);
+    opacity: 0.7;
+    border-radius: 50px;
+    font-size: 2em;
+}
+
+.animated:hover{
+    transition-duration: 2s, 5s, 6s;
+    transition-property: transform, background, font-size;
 }
