--- a/playground/transition.css
+++ b/playground/transition.css
@@ -26,15 +26,19 @@
 
 .box:hover{
     transform: translateX(200px);
+    background-color: teal;
 }
 
 .animated:hover{
-    transition-property: transform;
-    transition-duration: 2s;
+    /*transition-property: transform;*/
+    /*transition-duration: 2s;*/
     /*transition-timing-function: linear;*/
     /*transition-timing-function: ease-in;*/
     /*transition-timing-function: ease-out;*/
     /*transition-timing-function: ease;*/
     /*transition-timing-function: ease-in-out;*/
-    transition-timing-function: ease-out;
+    /*transition-timing-function: ease-out;*/
+    
+    transition: transform 2s ease-out 1s, background-color 0.5s linear 0.5s;
+
 }
