--- a/keyframe-animations/sun.css
+++ b/keyframe-animations/sun.css
@@ -1,37 +1,37 @@
 body {
     margin: 0 0 0 0;
     background-color: #2c3e50;
-    animation-name: sky-change;
-    animation-duration: 3s;
+    animation-name: skychange;
+    animation-duration: 4s;
     animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: infinite;
 }
 
-@keyframes sky-change{
+@keyframes skychange{
     0%{
-        color: #282526;
+        background-color: #282526;
     }
     5%{
-        color: #f9111d;
+        background-color: #f9111d;
     }
     10%{
-        color: #eda8cf;
+        background-color: #eda8cf;
     }
     30%{
-        color: #0fcff0;
+        background-color: #0fcff0;
     }
     70%{
-        color: #0fcff0;
+        background-color: #0fcff0;
     }
     90%{
-        color: #eda8cf;
+        background-color: #eda8cf;
     }
     95%{
-        color: #f9111d;
+        background-color: #f9111d;
     }
     100%{
-        color: #282526;
+        background-color: #282526;
     }
 }
 .grass {
@@ -46,37 +46,32 @@ body {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    animation-name: sun-animation;
-    animation-duration: 3s;
+    animation-name: sunanimation;
+    animation-duration: 4s;
     animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: infinite;
 }
 
-@keyframes sun-animation{
+@keyframes sunanimation{
     0%{
         background: #ed8600;
-        transform: translateY(100%);
+        transform: translate(0px, 0px)
     }
     25%{
         background: #f1c40f;
-        transform: translateX(75%);
-         transform: translateY(-50%);
+        transform: translate(200px, -100px);
     }
     50%{
         background: #f1c40f;
-        transform: translateX(75%); 
-        transform: translateY(-10%);
-        
+        transform: translate(400px, -200px);
     }
     75%{
         background: #f1c40f;
-        transform: translateX(75%);
-         transform: translateY(-20%);
+        transform: translate(500px, -100px)
     }
     100%{
         background: #ed5a00;
-        transform: translateX(300%);
-        transform: translateY(-100%);
+        transform: translate(600px, 100px);
     }
 }
