--- a/keyframe-animations/sun.css
+++ b/keyframe-animations/sun.css
@@ -2,7 +2,7 @@ body {
     margin: 0 0 0 0;
     background-color: #2c3e50;
     animation-name: skychange;
-    animation-duration: 4s;
+    animation-duration: 10s;
     animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: infinite;
@@ -42,12 +42,12 @@ body {
 }
 
 .sun {
-    background: #f1c40f;
+    background-color: #f1c40f;
     width: 200px;
     height: 200px;
     border-radius: 50%;
     animation-name: sunanimation;
-    animation-duration: 4s;
+    animation-duration: 10s;
     animation-timing-function: ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: infinite;
@@ -55,23 +55,23 @@ body {
 
 @keyframes sunanimation{
     0%{
-        background: #ed8600;
+        background-color: #ed8600;
         transform: translate(-200px, 200px)
     }
     25%{
-        background: #f1c40f;
+        background-color: #f1c40f;
         transform: translate(330px, -100px);
     }
     50%{
-        background: #f1c40f;
+        background-color: #f1c40f;
         transform: translate(860px, -200px);
     }
     75%{
-        background: #f1c40f;
+        background-color: #f1c40f;
         transform: translate(1390px, -100px)
     }
     100%{
-        background: #ed5a00;
+        background-color: #ed5a00;
         transform: translate(1920px, 200px);
     }
 }
